--- a/zeppelin-web/src/components/navbar/navbar.html
+++ b/zeppelin-web/src/components/navbar/navbar.html
@@ -45,8 +45,8 @@ limitations under the License.
       <ul class="nav navbar-nav navbar-right" style="margin-top:10px; margin-right:5px;">
         <li class="server-status">
           <i class="fa fa-circle" ng-class="{'server-connected':navbar.connected, 'server-disconnected':!navbar.connected}"></i>
-          <span ng-show="navbar.connected">Connected</span>
-          <span ng-show="!navbar.connected">Disconnected</span>
+            <span ng-show="navbar.connected">{{token.user}} Connected</span>
+            <span ng-show="!navbar.connected">Disconnected</span>
         </li>
       </ul>
     </div>
